--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,10 @@
     <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Diagram Exporter</name>
+    <name>Fireworks Exporter</name>
 
-    <description>Export Pathway diagram into PowerPoint or PNG</description>
-    <url>http://reactome.org</url>
+    <description>Export Pathway fireworks into raster</description>
+    <url>https://reactome.org</url>
     <organization>
         <name>The European Bioinformatics Institute</name>
         <url>http://www.ebi.ac.uk/</url>
