adding the .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # intelliJ idea git ignore
+*.iml
 .idea
 
 *target*
 *.jar
 *.war
 *.ear
+*.class
+
 # eclipse specific git ignore
 *.pydevproject
 .project
@@ -21,15 +24,12 @@ local.properties
 .settings/
 .loadpath
 
-.DS_Store
-
 # External tool builders
 .externalToolBuilders/
 
 # Locally stored "Eclipse launch configurations"
 *.launch
 
-*.lic
-*.lic.xml
-
-test-image
+#OS files
+.DS_Store
+.DS_Store?
