--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.reactome.server.tools</groupId>
     <artifactId>fireworks-exporter</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
     <packaging>jar</packaging>
 
     <name>Fireworks Exporter</name>
@@ -26,7 +26,7 @@
     </developers>
 
     <properties>
-        <diagram.reader.version>1.1.1</diagram.reader.version>
+        <diagram.reader.version>1.1.3</diagram.reader.version>
         <batik.version>1.9.1</batik.version>
         <aspose.version>17.7</aspose.version>
         <logback.version>1.1.10</logback.version>
@@ -85,6 +85,12 @@
             <groupId>com.martiansoftware</groupId>
             <artifactId>jsap</artifactId>
             <version>${jasp.version}</version>
+        </dependency>
+        <!-- Batik for SVG -->
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-codec</artifactId>
+            <version>${batik.version}</version>
         </dependency>
     </dependencies>
 
