--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     </developers>
 
     <properties>
+        <analysis-core>3.1.2</analysis-core>
         <diagram.reader.version>1.1.3</diagram.reader.version>
         <batik.version>1.9.1</batik.version>
         <aspose.version>17.7</aspose.version>
@@ -57,7 +58,7 @@
         <dependency>
             <groupId>org.reactome.server.tools</groupId>
             <artifactId>analysis-core</artifactId>
-            <version>3.1.2-SNAPSHOT</version>
+            <version>${analysis-core}</version>
         </dependency>
 
         <dependency>
