--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.reactome.server.tools</groupId>
     <artifactId>fireworks-exporter</artifactId>
-    <version>1.1.4</version>
+    <version>1.1.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Fireworks Exporter</name>
@@ -26,10 +26,10 @@
     </developers>
 
     <properties>
-        <analysis-core>3.3.0</analysis-core>
+        <analysis-core>3.3.2</analysis-core>
         <diagram.reader.version>1.1.3</diagram.reader.version>
 
-        <batik.version>1.9.1</batik.version>
+        <batik.version>1.10</batik.version>
         <aspose.version>17.7</aspose.version>
         <logback.version>1.1.10</logback.version>
         <commons.io.version>2.5</commons.io.version>
@@ -206,24 +206,44 @@
         <repository>
             <id>pst-release</id>
             <name>EBI Nexus Repository</name>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
+            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
         </repository>
         <!-- EBI SNAPSHOT repo -->
         <snapshotRepository>
             <uniqueVersion>false</uniqueVersion>
             <id>pst-snapshots</id>
             <name>EBI Nexus Snapshots Repository</name>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
+            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
     <!-- Repositories -->
     <repositories>
 
+        <!-- MAVEN central -->
+        <repository>
+            <id>central</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>https://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>central-bck</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>https://repo1.maven.org/maven/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        
         <repository>
             <id>nexus-ebi-repo-release</id>
             <name>The EBI internal repository</name>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
+            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -234,7 +254,7 @@
         <repository>
             <id>nexus-ebi-repo-snapshot</id>
             <name>The EBI internal repository</name>
-            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
+            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
@@ -245,7 +265,7 @@
 
         <repository>
             <id>aspose-maven-repository</id>
-            <url>http://maven.aspose.com/repository/ext-release-local</url>
+            <url>https://maven.aspose.com/repository/ext-release-local</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -256,7 +276,7 @@
 
         <repository>
             <id>mygrid-maven-repository</id>
-            <url>http://www.mygrid.org.uk/maven/repository/</url>
+            <url>httpss://www.mygrid.org.uk/maven/repository/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
