--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.reactome.server.tools</groupId>
@@ -7,47 +9,60 @@
     <version>1.1.8</version>
     <packaging>jar</packaging>
 
-    <name>Fireworks Exporter</name>
-
+    <name>${project.groupId}:${project.artifactId}</name>
     <description>Export Pathway fireworks into raster</description>
-    <url>https://reactome.org</url>
+    <url>https://github.com/reactome-pwp/fireworks-exporter</url>
+
     <organization>
-        <name>The European Bioinformatics Institute</name>
-        <url>http://www.ebi.ac.uk/</url>
+        <name>Reactome</name>
+        <url>https://reactome.org</url>
     </organization>
 
     <developers>
         <developer>
             <id>plorente</id>
             <name>Pascual Lorente</name>
-            <email>plorente@ebi.ac.uk</email>
-            <organization>http://www.ebi.ac.uk/</organization>
+            <roles>
+                <role>alumni</role>
+            </roles>
         </developer>
     </developers>
 
-    <properties>
-        <analysis-core>3.3.7</analysis-core>
-        <diagram.reader.version>1.1.6</diagram.reader.version>
+    <scm>
+        <connection>scm:git:git://github.com/reactome-pwp/fireworks-exporter.git</connection>
+        <developerConnection>scm:git:ssh://github.com:reactome-pwp/fireworks-exporter.git</developerConnection>
+        <url>https://github.com/reactome-pwp/fireworks-exporter/tree/master</url>
+    </scm>
 
+    <properties>
+        <!-- dependencies -->
+        <analysis.core.version>3.3.7</analysis.core.version>
         <batik.version>1.14</batik.version>
-        <logback.version>1.1.10</logback.version>
         <commons.io.version>2.5</commons.io.version>
+        <diagram.reader.version>1.1.6</diagram.reader.version>
+        <itextpdf.layout.version>7.1.1</itextpdf.layout.version>
+        <log4j.version>1.2.17</log4j.version>
+        <logback.version>1.1.10</logback.version>
         <jasp.version>2.1</jasp.version>
         <junit.version>4.12</junit.version>
 
-        <!--build-->
+        <!-- build -->
         <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <dependency.locations.enabled>false</dependency.locations.enabled>
 
-        <!--maven build and plugins-->
+        <!-- maven build and plugins -->
+        <maven.assembly.version>2.6</maven.assembly.version>
         <maven.compiler.version>3.5.1</maven.compiler.version>
+        <maven.gpg.version>1.5</maven.gpg.version>
         <maven.jar.version>2.6</maven.jar.version>
-        <maven.source.version>2.4</maven.source.version>
+        <maven.javadoc.version>2.10.3</maven.javadoc.version>
+        <maven.release.version>2.5.3</maven.release.version>
+        <maven.source.version>2.1.2</maven.source.version>
+        <nexus-staging-maven-plugin>1.6.7</nexus-staging-maven-plugin>
     </properties>
 
     <dependencies>
-
         <!-- Diagram Reader -->
         <dependency>
             <groupId>org.reactome.server.tools</groupId>
@@ -58,7 +73,7 @@
         <dependency>
             <groupId>org.reactome.server.tools</groupId>
             <artifactId>analysis-core</artifactId>
-            <version>${analysis-core}</version>
+            <version>${analysis.core.version}</version>
         </dependency>
 
         <dependency>
@@ -68,17 +83,18 @@
             <scope>test</scope>
         </dependency>
 
-        <!--Logback classic-->
+        <!-- Logback classic -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
+
         <!-- Necessary to load org.apache.log4j.Category in Base64 -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>${log4j.version}</version>
         </dependency>
 
         <dependency>
@@ -87,22 +103,24 @@
             <version>${commons.io.version}</version>
         </dependency>
 
-        <!--JSAP console reader-->
+        <!-- JSAP console reader -->
         <dependency>
             <groupId>com.martiansoftware</groupId>
             <artifactId>jsap</artifactId>
             <version>${jasp.version}</version>
         </dependency>
+
         <!-- Batik for SVG -->
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-codec</artifactId>
             <version>${batik.version}</version>
         </dependency>
+
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>layout</artifactId>
-            <version>7.1.1</version>
+            <version>${itextpdf.layout.version}</version>
         </dependency>
     </dependencies>
 
@@ -159,7 +177,7 @@
             <!-- Generate jar with dependencies -->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
+                <version>${maven.assembly.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -185,7 +203,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
+                <version>${maven.source.version}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -196,29 +214,85 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Nexus staging plugin for Sonatype deployment -->
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>${nexus-staging-maven-plugin}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+
+            <!-- Generate JavaDoc jar file -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven.javadoc.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Signs deployed jar, source jar, and JavaDoc jar with GPG -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>${maven.gpg.version}</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Allows "release" mvn goal to deploy a SNAPSHOT or version release to Sonatype -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${maven.release.version}</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <releaseProfiles>release</releaseProfiles>
+                    <goals>deploy</goals>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
-    <!--Configures the distribution to nexus repository -->
+    <!-- Configures the distribution to nexus repository -->
     <distributionManagement>
-        <!-- EBI repo -->
+        <!-- Sonatype Release repo -->
         <repository>
-            <id>pst-release</id>
-            <name>EBI Nexus Repository</name>
-            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
+            <id>ossrh</id>
+            <name>Sonatype Release Repository</name>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
-        <!-- EBI SNAPSHOT repo -->
+
+        <!-- Sonatype SNAPSHOT repo -->
         <snapshotRepository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>pst-snapshots</id>
-            <name>EBI Nexus Snapshots Repository</name>
-            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
+            <id>ossrh</id>
+            <name>Sonatype Snapshot Repository</name>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
     <!-- Repositories -->
     <repositories>
-
         <!-- MAVEN central -->
         <repository>
             <id>central</id>
@@ -229,6 +303,7 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+
         <repository>
             <id>central-bck</id>
             <name>Maven Repository Switchboard</name>
@@ -250,6 +325,7 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+
         <repository>
             <id>nexus-ebi-repo-snapshot</id>
             <name>The EBI internal repository</name>
@@ -264,7 +340,7 @@
 
         <repository>
             <id>mygrid-maven-repository</id>
-            <url>httpss://www.mygrid.org.uk/maven/repository/</url>
+            <url>https://www.mygrid.org.uk/maven/repository/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -273,5 +349,4 @@
             </snapshots>
         </repository>
     </repositories>
-
 </project>
