--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.reactome.server.tools</groupId>
     <artifactId>fireworks-exporter</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>jar</packaging>
 
     <name>Fireworks Exporter</name>
@@ -27,8 +27,8 @@
     </developers>
 
     <properties>
-        <analysis-core>3.4.0-SNAPSHOT</analysis-core>
-        <diagram.reader.version>1.2.0-SNAPSHOT</diagram.reader.version>
+        <analysis-core>3.4.0</analysis-core>
+        <diagram.reader.version>1.2.0</diagram.reader.version>
 
         <batik.version>1.14</batik.version>
         <logback.version>1.3.0-alpha5</logback.version>
