--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
 
         <batik.version>1.14</batik.version>
         <logback.version>1.3.0-alpha5</logback.version>
-        <commons.io.version>2.8.0</commons.io.version>
+        <commons.io.version>2.11.0</commons.io.version>
         <jasp.version>2.1</jasp.version>
-        <junit.version>5.8.0-M1</junit.version>
-        <layout.version>7.1.15</layout.version>
+        <junit.version>5.8.2</junit.version>
+        <layout.version>7.2.3</layout.version>
 
         <!--build-->
         <jdk.version>11</jdk.version>
