--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <dependency.locations.enabled>false</dependency.locations.enabled>
         <main.class>org.reactome.server.tools.fireworks.exporter.FireworksExporter</main.class>
 
+        <maven.surefire.version>3.5.2</maven.surefire.version>
         <maven.release.version>3.3.1</maven.release.version>
         <maven.gpg.version>3.2.7</maven.gpg.version>
         <maven.javadoc.version>3.11.2</maven.javadoc.version>
@@ -212,7 +213,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.2</version>
+                <version>${maven.surefire.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
