--- a/pom.xml
+++ b/pom.xml
@@ -276,7 +276,8 @@
                 </executions>
             </plugin>
 
-            <!-- Nexus staging plugin for Sonatype deployment -->
+<!--
+            &lt;!&ndash; Nexus staging plugin for Sonatype deployment &ndash;&gt;
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -289,7 +290,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Generate JavaDoc jar file -->
+            &lt;!&ndash; Generate JavaDoc jar file &ndash;&gt;
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -310,7 +311,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Signs deployed jar, source jar, and JavaDoc jar with GPG -->
+            &lt;!&ndash; Signs deployed jar, source jar, and JavaDoc jar with GPG &ndash;&gt;
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -325,11 +326,11 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <gpgExecutable>gpg</gpgExecutable> <!-- Explicitly specify the GPG executable -->
+                    <gpgExecutable>gpg</gpgExecutable> &lt;!&ndash; Explicitly specify the GPG executable &ndash;&gt;
                 </configuration>
             </plugin>
 
-            <!-- Allows "release" mvn goal to deploy a SNAPSHOT or version release to Sonatype -->
+            &lt;!&ndash; Allows "release" mvn goal to deploy a SNAPSHOT or version release to Sonatype &ndash;&gt;
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
@@ -341,6 +342,7 @@
                     <goals>deploy</goals>
                 </configuration>
             </plugin>
+-->
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
