--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.reactome.maven</groupId>
         <artifactId>reactome-parent</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.5-SNAPSHOT</version>
     </parent>
 
     <description>Export Pathway fireworks into raster</description>
@@ -217,8 +217,9 @@
             </snapshots>
         </repository>
 
+        <!-- EBI repo -->
         <repository>
-            <id>nexus-ebi-repo-release</id>
+            <id>nexus-ebi-repo</id>
             <name>The EBI internal repository</name>
             <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
             <releases>
@@ -228,10 +229,11 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <!-- EBI SNAPSHOT repo -->
         <repository>
-            <id>nexus-ebi-repo-snapshot</id>
-            <name>The EBI internal repository</name>
-            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
+            <id>nexus-ebi-snapshot-repo</id>
+            <name>The EBI internal snapshot repository</name>
+            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
